fix: Mobile spacing issue with social buttons

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -54,7 +54,7 @@
 	text-align: left;
 }
 
-@media (max-width: 420px) {
+@media (max-width: 520px) {
 	.contact-about {
 		min-width: 16rem;
 	}
